<resources>
    <string name="app_name">TickVision</string>
    <string name="reset_text">صفر کردن مقادیر</string>
    <string name="export_text">گرفتن خروجی از مقادیر</string>
    <string name="setting_app_text">تنظیمات برنامه</string>
    <string name="contact_text">ارتباط با ما</string>
    <string name="mail_text">ارسال ایمیل</string>
    <string name="whatsapp_text">از طریق واتساپ</string>
    <string name="call_text">تماس تلفنی (فقط موارد ضروری)</string>
    <string name="another_text">سایر</string>
    <string name="idea_text">بیان نظرات</string>
    <string name="about_us_text">درباره ما</string>
    <string name="my_app_text">سایر برنامه های ما</string>
    <string name="exit_title">خروج</string>
    <string name="exit_account_text">خروج از حساب کاربری</string>
    <string name="exit_app_text">خروج از برنامه</string>
    <string name="start_text">شروع</string>
    <string name="try_again_text">تلاش دوباره</string>
    <string name="check_connection_text">لطفا اتصال اینترنت دستگاه خود را چک نمائید</string>
    <string name="username_text">نام کاربری</string>
    <string name="password_text">کلمه عبور</string>
    <string name="config_password_text">تائید کلمه عبور</string>
    <string name="signup_text">ثبت نام</string>
    <string name="i_have_account_text"><u>حساب کاربری دارم (ورود)</u></string>
    <string name="empty_field_error">این فیلد نمی تواند خالی باشد</string>
    <string name="username_type_error">نام کاربری باید متشکل از حروف یا اعداد انگلیسی یا یکی از علامت های \".\" و \"_\" باشد</string>
    <string name="mail_type_error">ایمیل نادرست است</string>
    <string name="pass_type_error">کلمه عبور با تائید آن همخوانی ندارد</string>
    <string name="signup_error">ثبت نام با مشکل مواجه شد</string>
    <string name="duplicate_error">ایمیل یا نام کاربری تکراری است</string>
    <string name="signup_success">ثبت نام با موفقیت انجام شد</string>
    <string name="user_mail_text">ایمیل یا نام کاربری</string>
    <string name="remember_text">مرا بخاطر بسپار</string>
    <string name="login_text">ورود</string>
    <string name="pass_forget_text">کلمه عبور را فراموش کرده ام</string>
    <string name="create_new_account_text"><u>ایجاد حساب کاربری جدید</u></string>
    <string name="login_error">نام کاربری یا ایمیل نادرست است</string>
    <string name="login_pass_error">کلمه عبور نادرست است</string>
    <string name="coming_soon_text">به زودی اضافه خواهد شد</string>
    <string name="add_vision_text">هدف جدید</string>
    <string name="select_check_vision_text">بررسی هدف</string>
    <string name="select_edit_vision_text">ویرایش هدف</string>
    <string name="update_old_visions_text">بروزرسانی هدف های پیشین</string>
    <string name="first_update_vision_dialog_text">شما قبلا تعدادی هدف مشخص کرده اید\nآیا جهت بروزرسانی مایل هستید ؟</string>
    <string name="update_text">بروزرسانی</string>
    <string name="remove_text">حذف هدف ها</string>
    <string name="clear_all_visions_tbl_title">حذف هدف های پیشین</string>
    <string name="drop_tbl_text">در صورت انتخاب حذف ، تمام هدف ها حذف شده و قابل بازیابی نیستند. آیا ادامه میدهید</string>
    <string name="back_text">بازگشت</string>
    <string name="drop_text">حذف</string>
    <string name="title_vision_text">عنوان هدف (حداکثر 50 کاراکتر)</string>
    <string name="amount_vision_text">مبلغ هدف (حداکثر 9 کاراکتر)</string>
    <string name="day_vision_text">تعداد روز تا تیک زدن هدف (حداکثر 5 کاراکتر)</string>
    <string name="continue_text">ادامه</string>
    <string name="add_vision_title_error">لطفا فیلد عنوان هدف را تکمیل نمائید</string>
    <string name="add_vision_amount_error">لطفا فیلد مبلغ هدف را تکمیل نمائید</string>
    <string name="save_vision_text">ثبت هدف</string>
    <string name="add_vision_day_error">لطفا فیلد تعداد روز را تکمیل نمائید</string>
    <string name="add_vision_all_field_error">لطفا تمام فیلدها را تکمیل نمائید</string>
    <string name="add_vision_success">ثبت هدف با موفقیت انجام شد</string>
    <string name="add_vision_error">ثبت هدف با خطا مواجه شد</string>
    <string name="add_vision_duplicate_error">عنوان هدف تکراری است</string>
    <string name="clear_all_vision_success_text">حذف هدف ها با موفقیت انجام شد</string>
    <string name="clear_all_visions_error">حذف هدف ها با خطا مواجه شد\nلطفا مجددا تلاش نمائید</string>
    <string name="update_all_visions_success_text">بروزرسانی هدف ها با موفقیت انجام شد</string>
    <string name="select_vision_day_dialog_text">لطفا یک هدف جهت بررسی روزانه انتخاب نمائید</string>
    <string name="select_text">انتخاب</string>
    <string name="select_vision_dialog_title">انتخاب هدف</string>
    <string name="select_vision_edit_dialog_text">لطفا یک هدف جهت ویرایش انتخاب نمائید</string>
    <string name="select_vision_error">لطفا یک هدف انتخاب نمائید</string>
    <string name="table_title">عملکرد روزانه</string>
    <string name="income_text">درآمد</string>
    <string name="payment_text">هزینه</string>
    <string name="time_00">00 : 00 : 00</string>
    <string name="working_hours_day_text">مدت زمان کارکرد امروز تاکنون :</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="all_income_text">کل درآمد</string>
    <string name="all_rest_text">کل باقیمانده</string>
    <string name="all_days_text">تعداد روز</string>
    <string name="profit_text">سود</string>
    <string name="damage_text">زیان</string>
    <string name="rest_days_text">باقیمانده روز</string>
    <string name="rest_text">باقیمانده</string>
    <string name="extra_text">مازاد</string>
    <string name="save_income_text">ثبت درآمد</string>
    <string name="save_payment_text">ثبت هزینه</string>
    <string name="warning_edit_text">لطفا توجه داشته باشید که در صورت ویرایش ، تمامی مقادیر مربوط به این هدف صفر خواهد شد</string>
    <string name="remove_vision_title">حذف هدف</string>
    <string name="remove_vision_text">آیا از حذف هدف اطمینان دارید ؟</string>
    <string name="delete_text">حذف</string>
    <string name="select_vision_day_dialog_title">انتخاب هدف (بررسی)</string>
    <string name="select_vision_edit_dialog_title">انتخاب هدف (ویرایش)</string>
    <string name="clear_all_visions_text">آیا از حذف تمام هدف ها اطمینان دارید ؟</string>
    <string name="clear_all_visions_title">حذف تمام هدف ها</string>
    <string name="edit_vision_success_text">ویرایش هدف با موفقیت انجام شد</string>
    <string name="edit_vision_success_error">ویرایش متن با خطا مواجه شد</string>
    <string name="edit_vision_title">ویرایش هدف</string>
    <string name="edit_vision_text">آیا از ویرایش هدف اطمینان دارید ؟</string>
    <string name="edit_text">ویرایش</string>
    <string name="income_amount_text">مبلغ دریافتی (حداکثر 9 کاراکتر)</string>
    <string name="save_price_text">ثبت مبلغ</string>
    <string name="payment_amount_text">مبلغ پرداختی (حداکثر 9 کاراکتر)</string>
    <string name="empty_save_price_field_error">لطفا فیلد مبلغ را تکمیل نمائید</string>
    <string name="update_price_success_test">ثبت مبلغ با موفقیت انجام شد</string>
    <string name="update_price_error">ثبت مبلغ با خطا مواجه شد</string>
    <string name="tick____vision">تیکـ...ویژن</string>
    <string name="notify_text">تیک ویژن در حال اجراست</string>
    <string name="timer_on_error">لطفا ابتدا تایمر را خاموش نمائید</string>
    <string name="congratulation_text">شما هدف امروز را تیک زدید...</string>
    <string name="ok_text">بسیار خب</string>
    <string name="update_vision_again_text">بروزرسانی اطلاعات هدف با خطا مواجه شد\nبا کلیک برروی تصویر فوق ، مجددا جهت بروزرسانی تلاش نمائید</string>
    <string name="updating_text">در حال بروزرسانی...</string>
    <string name="getting_info_text">در حال دریافت اطلاعات...</string>
    <string name="sending_info_text">در حال ارسال اطلاعات...</string>
    <string name="please_vait_text">لطفا چند لحظه صبر نمائید...</string>
    <string name="reset_this_vision_text">آیا از صفر کردن مقادیر هدف فعلی اطمینان دارید ؟</string>
    <string name="btn_reset_text">ریست</string>
    <string name="update_vision_success_text">بروزرسانی هدف با موفقیت انجام شد</string>
    <string name="duplicate_signup_error">شما یک بار حساب کاربری ایجاد کرده اید</string>
    <string name="create_account_title_error">ایجاد حساب کاربری جدید</string>
    <string name="create_account_text_error">شما یکبار حساب کاربری ایجاد کرده اید ، در صورتی که تمایل به ایجاد حساب کاربری دیگری دارید ابتدا باید وارد تنظیمات برنامه شده و حساب قبلی خود را حذف نمائید !</string>
    <string name="setting_text">تنظیمات</string>
    <string name="update_vision_error">بروزرسانی هدف با خطا مواجه شد</string>
    <string name="login_stay_text">ورود بدون نام کاربری و کلمه عبور</string>
    <string name="show_exit_dialog_text">نمایش دیالوگ خروج</string>
    <string name="delete_account_text">حذف حساب کاربری</string>
    <string name="remove_account_text">حذف حساب کاربری</string>
    <string name="sure_delete_account_text">آیا از حذف حساب کاربری خود اطمینان دارید ؟</string>
    <string name="delete_account_success_text">حذف حساب کاربری با موفقیت انجام شد</string>
    <string name="delete_account_error">حذف حساب کاربری با خطا مواجه شد</string>
    <string name="exit_app_text_text">آیا از خروج اطمینان دارید ؟</string>
    <string name="show_again_text">دوباره نمایش داده نشود</string>
    <string name="exit">خروج</string>
    <string name="enter_again_back_text">جهت خروج مجددا کلیک نمائید</string>
    <string name="export_fiel_success_text">فایل مورد نظر در پوشه دانلود ایجاد شد</string>
</resources>