<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_layout_dialog">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/dialog_background">

        <TextView
            android:id="@+id/tv_title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_background"
            android:padding="10dp"
            android:text="@string/remove_vision_title"
            android:textAlignment="center"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_text_select_vision_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_dialog"
            android:textSize="@dimen/btn_text_size"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:textColor="@color/primary_color"
            android:background="@drawable/red_edt_background"
            android:layout_marginTop="@dimen/margin_top_first_view_dialog"
            android:layout_marginBottom="@dimen/margin_bottom_last_edt_dialog"
            android:text="@string/remove_vision_text"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="@dimen/btn_dialog_width"
        android:layout_height="@dimen/btn_dialog_height"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/red_btn_background"
        android:gravity="center"
        android:text="@string/back_text"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/btn_text_size"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_remove"
        android:layout_width="@dimen/btn_dialog_width"
        android:layout_height="@dimen/btn_dialog_height"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/red_btn_background"
        android:gravity="center"
        android:text="@string/delete_text"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/btn_text_size"
        tools:ignore="TouchTargetSizeCheck" />

</RelativeLayout>