<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:clickable="true"
    android:focusable="true"
    android:layoutDirection="rtl"
    tools:context=".LoginActivity">

    <include layout="@layout/toolbar_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_mail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left_right_signup"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="@dimen/margin_left_right_signup"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:errorIconTint="@color/red"
        app:errorTextAppearance="@color/red"
        app:errorTextColor="@color/red"
        app:startIconDrawable="@drawable/ic_account"
        app:startIconTint="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_user_mail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/user_mail_text"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:maxLines="1"
            android:paddingStart="@dimen/edt_padding"
            android:paddingEnd="@dimen/edt_padding"
            android:textCursorDrawable="@drawable/red_cursor"
            android:textSize="@dimen/normal_text_size"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_mail_layout"
        android:layout_marginStart="@dimen/margin_left_right_signup"
        android:layout_marginTop="@dimen/margin_top_text_input_layout"
        android:layout_marginEnd="@dimen/margin_left_right_signup"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:errorIconDrawable="@null"
        app:errorIconTint="@color/red"
        app:errorTextAppearance="@color/red"
        app:errorTextColor="@color/red"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray"
        app:startIconDrawable="@drawable/ic_key"
        app:startIconTint="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_text"
            android:inputType="numberPassword"
            android:letterSpacing=".4"
            android:maxLength="10"
            android:maxLines="1"
            android:paddingStart="@dimen/edt_padding"
            android:paddingEnd="@dimen/edt_padding"
            android:textCursorDrawable="@drawable/red_cursor"
            android:textSize="@dimen/normal_text_size"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/ch_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass_layout"
        android:layout_marginStart="@dimen/margin_left_right_signup"
        android:layout_marginTop="@dimen/margin_top_text_input_layout"
        android:layout_marginEnd="@dimen/margin_left_right_signup"
        android:padding="10dp"
        android:text="@string/remember_text"
        android:textColor="@color/gray"
        android:textSize="@dimen/normal_text_size"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/ch_remember"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/margin_left_right_signup"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/margin_left_right_signup"
        android:background="@drawable/red_btn_background"
        android:text="@string/login_text"
        android:textColor="@color/primary_ultra_light_color"
        android:textSize="@dimen/btn_text_size"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <TextView
        android:id="@+id/forget_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/pass_forget_text"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/normal_text_size"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/create_new_account_text"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/normal_text_size"
        tools:ignore="TextContrastCheck" />

</RelativeLayout>