<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_layout_dialog">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_background"
            android:padding="10dp"
            android:text="@string/create_account_title_error"
            android:textAlignment="center"
            android:layout_alignParentTop="true"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_text_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_dialog"
            android:layout_marginStart="@dimen/btn_margin_left_right"
            android:layout_marginTop="@dimen/margin_top_first_view_dialog"
            android:layout_marginEnd="@dimen/btn_margin_left_right"
            android:layout_marginBottom="@dimen/margin_bottom_last_edt_dialog"
            android:background="@drawable/red_edt_background"
            android:padding="10dp"
            android:text="@string/create_account_text_error"
            android:textAlignment="center"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/normal_text_size"
            tools:ignore="VisualLintLongText" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="@dimen/btn_dialog_width"
        android:layout_height="@dimen/btn_dialog_height"
        android:layout_marginStart="@dimen/btn_margin_left_right"
        android:layout_marginTop="-20dp"
        android:background="@drawable/red_btn_background"
        android:gravity="center"
        android:text="@string/back_text"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toStartOf="@id/layout"
        app:layout_constraintTop_toBottomOf="@id/layout"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_setting"
        android:layout_width="@dimen/btn_dialog_width"
        android:layout_height="@dimen/btn_dialog_height"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="@dimen/btn_margin_left_right"
        android:background="@drawable/red_btn_background"
        android:gravity="center"
        android:text="@string/setting_text"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintEnd_toEndOf="@id/layout"
        app:layout_constraintTop_toBottomOf="@id/layout"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>