<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_layout_dialog">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="227dp"
        android:background="@drawable/dialog_background">

        <TextView
            android:id="@+id/tv_title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_background"
            android:padding="10dp"
            android:text="@string/select_vision_dialog_title"
            android:textAlignment="center"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

        <View
            android:id="@+id/v1"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/primary_color"
            android:layout_below="@id/tv_title_dialog"
            android:layout_marginTop="@dimen/margin_top_first_view_dialog"
            android:layout_marginStart="@dimen/btn_margin_left_right"
            android:layout_marginEnd="@dimen/btn_margin_left_right"/>

        <TextView
            android:id="@+id/tv_text_select_vision_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/v1"
            android:textSize="@dimen/large_text_size"
            android:textColor="@color/primary_color"
            android:layout_marginTop="5dp"
            android:text="@string/select_vision_day_dialog_text"
            android:layout_centerHorizontal="true"/>

        <View
            android:id="@+id/v2"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/primary_color"
            android:layout_below="@id/tv_text_select_vision_dialog"
            android:layout_marginTop="5dp"
            android:layout_marginStart="@dimen/btn_margin_left_right"
            android:layout_marginEnd="@dimen/btn_margin_left_right"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/select_dialog_rv"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@id/v2"
            android:background="@drawable/rv_select_item_background"
            android:paddingTop="1.5dp"
            android:paddingBottom="1.5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:scrollbarThumbVertical="@color/transparent"
            android:overScrollMode="never"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="@dimen/btn_dialog_width"
        android:layout_height="@dimen/btn_dialog_height"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="207dp"
        android:background="@drawable/red_btn_background"
        android:gravity="center"
        android:text="@string/back_text"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/btn_text_size"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_select"
        android:layout_width="@dimen/btn_dialog_width"
        android:layout_height="@dimen/btn_dialog_height"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="207dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/red_btn_background"
        android:gravity="center"
        android:text="@string/select_text"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/btn_text_size"
        tools:ignore="TouchTargetSizeCheck" />

</RelativeLayout>